name:              www-ltr
version:           0.0
description:       lucie thorne website
author:            Rohan Drape
maintainer:        rd@slavepianos.org
stability:         Experimental
homepage:          http://rd.slavepianos.org/?t=www-ltr
tested-with:       GHC==7.6.1
build-type:        Simple
cabal-version:     >= 1.8

data-files:        README
                   Makefile
                   css/lt.css
                   data/config/htaccess
                   data/config/*.hs
                   data/font/*.otf
                   data/font/*.ttf
                   data/image/cover/*.jpg
                   data/image/front/*.jpg
                   data/image/photos/*.jpg
                   data/image/working/*.jpg
                   data/md/*.md
                   data/md/albums/*.md
                   data/md/error/*.md
                   data/md/forms/*.md
                   data/md/news/*.md
                   data/md/shop/*.md
                   data/md/shows/*.md
                   data/md/songs/*.md
                   data/mp3/*.mp3
                   data/pr/*.pdf
                   data/swf/*.swf
                   data/xspf/*.xspf

executable ltr-cgi
  build-depends:   base == 4.*,
                   bytestring,
                   cgi,
                   directory,
                   directory-tree,
                   filepath,
                   html-minimalist,
                   old-locale,
                   pandoc-minus,
                   process,
                   split,
                   time,
                   utf8-string,
                   www-minus,
                   xhtml,
                   xml
  hs-source-dirs:  hs
  main-is:         ltr-cgi.hs
  ghc-options:     -Wall -fwarn-tabs
